// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MergeReportsModal should render a basic component: basic 1`] = `
<Modal
  appendTo={[Function]}
  aria-labelledby="_r_0_"
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  variant="medium"
>
  <ModalHeader
    labelId="_r_0_"
    title="t([
  "merge.modal",
  {
    "context": "title"
  }
])"
  />
  <ModalBody>
    <Bullseye>
      <EmptyState
        headingLevel="h2"
        icon={[Function]}
        titleText="t([
  "merge.modal",
  {
    "context": "body-in-progress"
  }
])"
      />
    </Bullseye>
  </ModalBody>
</Modal>
`;

exports[`MergeReportsModal should render a component after merge failed: errored 1`] = `
<Modal
  appendTo={[Function]}
  aria-labelledby="_r_2_"
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  variant="medium"
>
  <ModalHeader
    labelId="_r_2_"
    title="t([
  "merge.modal",
  {
    "context": "title"
  }
])"
  />
  <ModalBody>
    <Bullseye>
      <EmptyState
        headingLevel="h2"
        icon={[Function]}
        titleText="t([
  "merge.modal",
  {
    "context": "header-errored"
  }
])"
      >
        <EmptyStateBody>
          t([
  "merge.modal",
  {
    "context": "body-errored",
    "msg": "Lorem ipsum dolor sit"
  }
])
        </EmptyStateBody>
      </EmptyState>
    </Bullseye>
  </ModalBody>
</Modal>
`;

exports[`MergeReportsModal should render a component after merge succeeded: success 1`] = `
<Modal
  appendTo={[Function]}
  aria-labelledby="_r_1_"
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  variant="medium"
>
  <ModalHeader
    labelId="_r_1_"
    title="t([
  "merge.modal",
  {
    "context": "title"
  }
])"
  />
  <ModalBody>
    <Bullseye>
      <EmptyState
        headingLevel="h2"
        icon={[Function]}
        titleText="t([
  "merge.modal",
  {
    "context": "header-successful"
  }
])"
      >
        <EmptyStateBody>
          t([
  "merge.modal",
  {
    "context": "body-successful"
  }
])
        </EmptyStateBody>
      </EmptyState>
    </Bullseye>
  </ModalBody>
</Modal>
`;
